deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels: 
        app: nginx
    spec:
      containers:
      - name: cont1
        image: chintu98/phpapp:appimage
        ports:
        - containerPort: 80

        #configmap intergration
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits: 
            cpu: "200m"
            memory: "256Mi"

          #probes
          livenessProbe:
            httpGet:
             path: /
             port: 80
             initialDelaySeconds: 30
             periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /
              port: 80
              initialDelaySeconds: 10
              periodSeconds: 5
