statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysqldb
  replicas: 1
  selector:
    matchLabels:
      app: app-database
  template:
    metadata:
      labels: 
        app: app-database
    spec:
      containers:
      - name: cont1
        image: chintu98/phpdb:dbimage
        ports:
        - containerPort: 3306

        #secret intergration
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits: 
            cpu: "200m"
            memory: "256Mi"
        volumeMounts:
          - name: pvc-1
            mountpath: /var/lib/mysql
      
      volumeClaimTemplates:
      - metadata:
          name: pvc-1
        spec:
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 2Gi
