appservice.yaml
apiVersion: v1
kind: Service
metadata: 
 name: my-service
spec:
  ClusterIP: None
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
